# hf-ms-transfer

./: .env.example  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
hf_ms_transfer/: __main__.py
