[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-ms-transfer"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A tool to transfer models from Hugging Face to ModelScope"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface_hub",
    "modelscope",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/your_username/hf-ms-transfer"
"Bug Tracker" = "https://github.com/your_username/hf-ms-transfer/issues"

[project.scripts]
"hf-ms-transfer" = "hf_ms_transfer.__main__:main"
